@@ -1,9 +1,14 @@
+2012-01-21  Uros Bizjak  <ubizjak@gmail.com>
+
+	PR rtl-optimization/56023
+	* gcc.dg/pr56023.c: New test.
+
 2013-01-21  Martin Jambor  <mjambor@suse.cz>
 
 	Backport from mainline
 	2013-01-17  Martin Jambor  <mjambor@suse.cz>
 
-        PR tree-optimizations/55264
+	PR tree-optimizations/55264
 	* g++.dg/ipa/pr55264.C: New test.
 
 2012-01-17  Uros Bizjak  <ubizjak@gmail.com>
