@@ -1,9 +1,15 @@
+2012-01-21  Uros Bizjak  <ubizjak@gmail.com>
+
+	PR rtl-optimization/56023
+	* haifa-sched.c (fix_inter_tick): Do not update ticks of instructions,
+	dependent on debug instruction.
+
 2013-01-21  Martin Jambor  <mjambor@suse.cz>
 
 	Backport from mainline
 	2013-01-17  Martin Jambor  <mjambor@suse.cz>
 
-        PR tree-optimizations/55264
+	PR tree-optimizations/55264
 	* cgraph.c (cgraph_create_virtual_clone): Mark clones as non-virtual.
 	* cgraph.h (cgraph_only_called_directly_p_or_aliased_p): Return false
 	for virtual functions.
